@@ -1,3 +1,10 @@
+2015-04-15  Gary Benson <gbenson@redhat.com>
+
+	* objfiles.c (allocate_objfile): Do not attempt to expand name
+	if name is a "target:" filename.
+	* auto-load.c (load_auto_scripts_for_objfile): Do not attempt
+	to load auto-load scripts for objfiles with "target:" filenames.
+
 2015-04-19  Gabriel Krisman Bertazi  <gabriel@krisman.be>
 
 	* breakpoint.c (update_dprintf_command_list): Remove duplicated
